Add static google analytics script

--- a/jukebox.html
+++ b/jukebox.html
@@ -18,6 +18,16 @@
 	<meta property="og:description" content="This is a fun webapp to allow our team to collectively suggest and play a list of songs. The songs URL is currently parsable from nhaccuatui.com, mp3.zing.com, soundcloud.com, and youtube.com" />
 	<meta property="og:image"       content="https://jukebox.naustud.io/nau-jukebox.png" />
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-88296410-2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-88296410-2');
+	</script>
+
 	<style>
 		::-webkit-input-placeholder {
 			color: rgba(0, 0, 0, 0.3);
