--- a/jukebox.html
+++ b/jukebox.html
@@ -19,7 +19,7 @@
 	<meta property="og:image"       content="https://jukebox.naustud.io/nau-jukebox.png" />
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-88296410-2"></script>
+	<script src="https://www.googletagmanager.com/gtag/js?id=UA-88296410-2"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
