Update intro text, FAQ, social meta

--- a/jukebox.html
+++ b/jukebox.html
@@ -14,9 +14,9 @@
 	<meta property="og:url"         content="https://jukebox.naustud.io" />
 	<meta property="og:type"        content="website" />
 	<meta property="og:title"       content="Nâu Jukebox" />
-	<meta name="description" content="This is a fun webapp to allow our team to collectively suggest and play a list of songs. The songs URL is currently parsable from nhaccuatui.com, mp3.zing.com, soundcloud.com, and youtube.com">
-	<meta property="og:description" content="This is a fun webapp to allow our team to collectively suggest and play a list of songs. The songs URL is currently parsable from nhaccuatui.com, mp3.zing.com, soundcloud.com, and youtube.com" />
-	<meta property="og:image"       content="https://jukebox.naustud.io/nau-jukebox.png" />
+	<meta name="description"        content="Nghe nhạc theo nhóm với bài hát có thể book từ Youtube, Nhaccuatui, Zing và Soundcloud miễn phí. | An online real-time jukebox for groups of users. Songs can be booked from Youtube, Nhaccuatui, Zing và Soundcloud">
+	<meta property="og:description" content="Nghe nhạc theo nhóm với bài hát có thể book từ Youtube, Nhaccuatui, Zing và Soundcloud miễn phí. | An online real-time jukebox for groups of users. Songs can be booked from Youtube, Nhaccuatui, Zing và Soundcloud" />
+	<meta property="og:image"       content="https://jukebox.naustud.io/screenshot.png" />
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script src="https://www.googletagmanager.com/gtag/js?id=UA-88296410-2"></script>
