add facebook app ID to meta

--- a/jukebox.html
+++ b/jukebox.html
@@ -11,11 +11,12 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.13.1/lodash.min.js"></script>
 	<script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
+	<meta property="fb:app_id"          content="1944697045808357" />
 	<meta property="og:url"         content="https://jukebox.naustud.io" />
 	<meta property="og:type"        content="website" />
 	<meta property="og:title"       content="Nâu Jukebox" />
-	<meta name="description"        content="Nghe nhạc theo nhóm với bài hát có thể book từ Youtube, Nhaccuatui, Zing và Soundcloud miễn phí. | An online real-time jukebox for groups of users. Songs can be booked from Youtube, Nhaccuatui, Zing và Soundcloud">
-	<meta property="og:description" content="Nghe nhạc theo nhóm với bài hát có thể book từ Youtube, Nhaccuatui, Zing và Soundcloud miễn phí. | An online real-time jukebox for groups of users. Songs can be booked from Youtube, Nhaccuatui, Zing và Soundcloud" />
+	<meta name="description"        content="Nghe nhạc theo nhóm với bài hát có thể book vào danh sách từ Youtube, NhacCuaTui, Zing và Soundcloud miễn phí. | An online real-time jukebox for groups. Songs can be booked from Youtube, NhacCuaTui, Zing và Soundcloud">
+	<meta property="og:description" content="Nghe nhạc theo nhóm với bài hát có thể book vào danh sách từ Youtube, NhacCuaTui, Zing và Soundcloud miễn phí. | An online real-time jukebox for groups. Songs can be booked from Youtube, NhacCuaTui, Zing và Soundcloud" />
 	<meta property="og:image"       content="https://jukebox.naustud.io/screenshot.png" />
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
